--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ repositories {
 }
 
 dependencies {
+    provided "org.apache.tomcat.embed:tomcat-embed-jasper"
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
     compile "org.grails:grails-core"
@@ -63,6 +64,9 @@ dependencies {
     testRuntime "org.seleniumhq.selenium:selenium-firefox-driver:3.6.0"
     testRuntime "org.seleniumhq.selenium:selenium-remote-driver:3.6.0"
     testRuntime "org.seleniumhq.selenium:selenium-api:3.6.0"
+
+    compile 'struts:struts:1.2.4'
+
 }
 
 bootRun {
